# NeuralNet

./: .gitignore  CMakeLists.txt
cmake/: toolchain-arm.cmake
include/: Brain.hpp  Layer.hpp  Neuron.hpp  custom_types.hpp
src/: Brain.cpp  Layer.cpp  Neuron.cpp
test/: CMakeLists.txt  test.cpp
